k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo1
  labels:
    app.kubernetes.io/managed-by: hermes
