k8s/07-ingress-moulineuse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moulineuse-ingress
  namespace: tricoteuses
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - moulineuse.demo1.ailab.infocepo.com
    secretName: tricoteuses-moulineuse-tls
  rules:
  - host: moulineuse.demo1.ailab.infocepo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moulineuse
            port:
              number: 8000
